PostGIS 3.0.0alpha5
XXXX/XX/XX
For full changes and enhancements, refer to PostGIS 3.0.0.
This version requires PostgreSQL 9.5+-12 and GEOS >= 3.6+
Additional features enabled if you are running Proj6+ and PostgreSQL 12

* Major highlights *
  - #4492, Fix ST_Simplify ignoring the value of the 3rd parameter (Raúl Marín)
  - #4494, Fix ST_Simplify output having an outdated bbox (Raúl Marín)

PostGIS 3.0.0alpha4
2019/08/10
For full changes and enhancements, refer to PostGIS 3.0.0.
This version requires PostgreSQL 9.5+-12 and GEOS >= 3.6+
Additional features enabled if you are running Proj6+ and PostgreSQL 12

* Major highlights *
  - #4433, 32-bit hash fix (requires reindexing hash(geometry) indexes) (Raúl Marín)
  - #4445, Fix a bug in geometry_le (Raúl Marín)
  - #4451, Fix the calculation of gserialized_max_header_size (Raúl Marín)
  - #4450, Speed up ST_GeometryType (Raúl Marín)
  - #4452, Add ST_TileEnvelope() (Paul Ramsey)
  - #4403, Support for shp2pgsql ability to reproject with copy mode (-D) (Regina Obe)
  - #4417, Update spatial_ref_sys with new entries (Paul Ramsey)
  - #4449, Speed up ST_X, ST_Y, ST_Z and ST_M (Raúl Marín)
  - #4454, Speed up _ST_OrderingEquals (Raúl Marín)
  - #4453, Speed up ST_IsEmpty (Raúl Marín)
  - #4271, postgis_extensions_upgrade() also updates after pg_upgrade (Raúl Marín)
  - #4466, Fix undefined behaviour in _postgis_gserialized_stats (Raúl Marín)
  - #4209, Handle NULL geometry values in pgsql2shp (Paul Ramsey)
  - #4419, Use protobuf version to enable/disable mvt/geobuf (Paul Ramsey)
  - #4437, Handle POINT EMPTY in shape loader/dumper (Paul Ramsey)
  - #4456, add Rasbery Pi 32-bit jenkins bot for testing (Bruce Rindahl,Regina Obe)
  - #4420, update path does not exists for address_standardizer extension (Regina Obe)

PostGIS 3.0.0alpha3
2019/07/01
For full changes and enhancements, refer to PostGIS 3.0.0.
This version requires PostgreSQL 9.5+-12 and GEOS >= 3.6+