@@ -2764,6 +2764,11 @@ Datum ST_RemoveRepeatedPoints(PG_FUNCTION_ARGS)
 
 	lwgeom_in = lwgeom_from_gserialized(g_in);
 	lwgeom_out = lwgeom_remove_repeated_points(lwgeom_in, tolerance);
+
+	/* COMPUTE_BBOX TAINTING */
+	if (lwgeom_in->bbox)
+		lwgeom_refresh_bbox(lwgeom_out);
+
 	g_out = geometry_serialize(lwgeom_out);
 
 	if (lwgeom_out != lwgeom_in)
